Attribute a raced accept's config failure to that connection, not the listener (computenet-dqy.37) (#91)
* Take the accept path off java-websocket so a reset kills one connection, not the listener (computenet-dqy.37)

Shapes (b) + (c) of the bead, per the human decision of 2026-08-13. Shape
(a), the self-healing facade, is not implemented: `WsListener` is still a
`WebSocketServer`, and `WsTransport.listen`, `HeldPort` and the demos keep
`listener.port` and `listener.stop(ms)`.

(b) VENDORED. java-websocket 1.6.0's `WebSocketServer.doAccept` configures a
freshly accepted socket -- `setTcpNoDelay`, `setKeepAlive` -- outside any
try/catch of its own and declares `throws IOException`. On a BSD/macOS host,
`setsockopt` on a socket whose peer already sent RST returns EINVAL, so that
exception unwinds into the selector loop's last resort,
`handleIOException(key, null, ex)`, where `key` is the SERVER's acceptable
key: cancelled, and its channel -- the listening channel -- closed. Silently.

`WsListener.admit` performs the same accept sequence with the configuration
inside its own `catch`: the failure is charged to the channel it came from,
that channel is closed, `WsListener.rejectedAccepts` counts it, the listening
socket is untouched.

`onConnect` alone is NOT enough, and that is measured rather than assumed: an
earlier revision of this change accepted inside `onConnect` and returned true,
which still leaves `doAccept`'s own `server.accept()` to run straight
afterwards. With that version in place the reproduction still killed the
listener after 2 resets ("expected:<-1> but was:<2>"). So `takeOverAccepting`
cancels the server's key on the library's selector -- making `key.isValid()`
false in the selector loop, so `doAccept` is unreachable -- and an acceptor
thread with its own selector owns the accept from then on. Costs, all
documented at the method: two private fields (`server`, `selector`) read
reflectively once per listener at `onStart`, with an `onError`-reported
fall